sventon change history
-----------------------------------------------------------------------------------------

[1540] Added: Feature #4551 - User based access control with caching.
[1533] Added: Feature #4522 - Case-insensitive entry search.
[1531] Added: Feature #4564 - New entry cache implementation.
[1525] Added: Feature #4565 - New log cache implementation.

[1517] Release 2.0.5 (2009-03-04)
[1514] Fixed: Bug #15311 - Does not work on WebSphere 6.1.

[1510] Release 2.0.4 (2009-02-22)
[1505] Fixed: Bug #15304 - Show latest revision info broken.

[1500] Release 2.0.3 (2009-02-18)
[1497] Fixed: Bug #15086 - User based auth broken (since 2.0.0).
[1496] Added: Feature #4116 - Possibility to search entries by author.

[1488] Release 2.0.2 (2009-02-10)
[1482] Fixed: Bug #15238 - EntryCache population bug.
[1476] Fixed: Bug #15182 - Append trailing slash to URL.
[1475] Fixed: Bug #15155 - Cache not flushed after updating 'lastUpdatedRevision'.

[1467] Release 2.0.1 (2009-01-25)
[1462] Added: Feature #4453 - Add link to admin page if enabled.
[1460] Fixed: Bug #15086 - User based auth broken.

[1456] Release 2.0.0 (2009-01-19)
[1443] Added: Upgraded to SVNKit 1.2.2.
[1425] Added: Feature #4407 - Add options to Log View.
[1421] Added: Upgraded to Spring 2.5.6.
[1418] Added: Feature #2747 - Asynchronous exports.
[1412] Fixed: Bug #5604 - Not possible to diff over paged logs.
[1411] Added: Feature #4400 - Age popup on all printed dates.
[1410] Added: Feature #4354 - Point out sventon dir using a property (sventon.dir).
[1409] Fixed: Bug #12687 - Cannot have more than one sventon instance per container.
[1408] Added: Feature #4221 - Possibility to decide default diff view.
[1393] Added: Feature #3022 - Add admin control.
[1333] Fixed: Bug #14244 - Revision zero not considered.
[1321] Added: Feature #4182 - Friendly URLs.
[1246] Added: Feature #3499 - Diff tags.
[1407] Fixed: Bug #14799 - Unnecessary recreation of thumbnails.

[1390] Release 1.4.1 (2008-10-01)